New add Event Button and Eventicus Logo linked to home

--- a/app/views/event/list.rhtml
+++ b/app/views/event/list.rhtml
@@ -20,6 +20,9 @@
 <% end %>
 
 <% content_for("sidebox") do %>
+  <div id="add_event">
+    <%= link_to 'Add New Event Now', :controller => 'event', :action => 'new' %>
+  </div>
 	<h3>City Cloud</h3>
 	<ul class="cloud">
 		<% for metro in @metros %>
