Suche in die Sidebar integriert. Man kann jetzt über die Suche auch den Ort bestimmen.

--- a/app/views/account/show.rhtml
+++ b/app/views/account/show.rhtml
@@ -4,6 +4,7 @@
 
 
 <% content_for("sidebox") do %>
+  <%= render :partial => 'event/sidebar_standard' %>
 	<h3>Friends</h3>
 	<p>here a list of all his friends</p>
 <% end %>
