--- a/app/views/layouts/blog.rhtml
+++ b/app/views/layouts/blog.rhtml
@@ -128,7 +128,7 @@
 					
 						<!-- Hier der Hauptteil -->
 						
-						<div style="color: green"><%= flash[:notice] %></div>
+						<% if flash[:notice]%><div class="notice"><%= flash[:notice] %></div><% end %>
 						
 						<div id="mainCont"><%= yield  %></div>
 						
