--- a/app/views/layouts/event.rhtml
+++ b/app/views/layouts/event.rhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<p style="color: green"><%= flash[:notice] %></p>
+	<% if flash[:notice]%><div class="notice"><%= flash[:notice] %></div><% end %>
 
 <%= yield  %>
 
