--- a/app/views/event/_events.rhtml
+++ b/app/views/event/_events.rhtml
@@ -4,6 +4,7 @@
 	<div class="event-body">
 		<h3><%= link_to strip_tags(event.title), event_url(:id => event.id) %></h3>
 		<p class="event-submitted">
+		  <%= avatar_for event.user, :mini %>
 			<%= link_to event.user.login, user_url(:id => event.user.login) %>
 			submitted this event
 			<span class="small-date"><%= time_ago_or_time_stamp(event.date_created) %></span>
