--- a/app/views/event/list.rhtml
+++ b/app/views/event/list.rhtml
@@ -28,6 +28,9 @@
 		<% end %>
 	</ul>
 	<br /><br />
+	<h3>Recent Visitors</h3>
+	<%= render :partial => 'recent_visitors' %>
+	<br /><br />
 	<h3>Recent Blog Posts</h3>
 	<%= render :partial => 'blog/recentposts' %>
 <% end %>
