--- a/app/views/layouts/blog.rhtml
+++ b/app/views/layouts/blog.rhtml
@@ -29,7 +29,7 @@
 			<div id="header">
 				
 				<div id="logo">
-					<div class="logo">Eventicus<sup>BETA</sup></div>
+					<div class="logo"><%= link_to 'Eventicus<sup>BETA</sup>', {:controller => 'events'} %></div>
 					
 					<ul id="mainmenu">
 						<li <%= 'class="active"' if params[:menu] == "events" %>>
@@ -145,7 +145,7 @@
 			</div>
 			
 			<div id="footer">
-				Copyright 2007 by eventicus.de - All rights reserved 
+				Copyright 2007-<%= Date.today.year %> by eventicus.de - All rights reserved 
 				| <%= link_to "About and Contact", :controller => 'event', :action => 'about' %> 
 				| <a href="http://groups.google.com/group/eventicus/topics">Discussions</a>
 			</div>
