Nur man selbst darf seinen Avatar ändern.

--- a/app/views/account/show.rhtml
+++ b/app/views/account/show.rhtml
@@ -14,8 +14,12 @@
 	<div class="user-data">
 		<h2>Details</h2>
 		<div class="avatar">
-		  <%= link_to avatar_for(@user), { :controller => 'account', :action => 'avatar'} %>
-		  <%= link_to("change your avatar", :action => 'avatar') if session['user'] != nil && @user.id == session['user'].id %>
+		  <%- if session['user'] != nil && @user.id == session['user'].id -%>
+  		  <%= link_to avatar_for(@user), { :controller => 'account', :action => 'avatar'} %>
+  		  <%= link_to("change your avatar", :action => 'avatar') %>
+		  <%- else -%>
+    	  <%= avatar_for(@user) %>
+		  <%- end -%>
 		</div>
 		<div class="data">
 			<% if session['user'] != nil && @user.id == session['user'].id %>
