--- a/app/views/event/list.rhtml
+++ b/app/views/event/list.rhtml
@@ -24,7 +24,7 @@
 	<h3>City Cloud</h3>
 	<ul class="cloud">
 		<% for metro in @metros %>
-			<li class="size3"><%= link_to metro.name , events_url(:type => params[:type], :category => params[:category], :range => params[:range], :page => params[:page], :place => metro.id) %> </li>
+			<li class="size3"><%= link_to metro.name , events_url(:type => params[:type], :category => params[:category], :range => params[:range], :page => params[:page], :place => metro) %> </li>
 		<% end %>
 	</ul>
 	<br /><br />
