--- a/app/views/layouts/eventicus.rhtml
+++ b/app/views/layouts/eventicus.rhtml
@@ -28,7 +28,6 @@
 					
 					<ul id="mainmenu">
 						<li <%= 'class="active"' if params[:menu] == "events" %>>
-							<% #link_to "Events", events_url(:place => params[:place], :type => params[:type], :category => params[:category], :range => params[:range]) %>
 							<%= link_to "Events", events_url() %>
 						</li>
 						<!--
@@ -89,7 +88,7 @@
 			</div>
 			
 			<div id="ads">
-				<% if !session['user'] && controller.controller_name != "account" %>
+				<% if false && !session['user'] && controller.controller_name != "account" %>
 				<div id="greeting">
 					<div class="signup-text">
 						<div class="box">
@@ -155,30 +154,6 @@
 							<%= yield :sidebox %>
 						</div>
 						
-						<% if false %>
-						<div class="side-box">
-							<script type="text/javascript"><!--
-							google_ad_client = "pub-7871361959208569";
-							google_alternate_color = "FFFFFF";
-							google_ad_width = 160;
-							google_ad_height = 600;
-							google_ad_format = "160x600_as";
-							google_ad_type = "text";
-							//2007-06-02: eventicus.de
-							google_ad_channel = "5436179676";
-							google_color_border = "FFFFFF";
-							google_color_bg = "FFFFFF";
-							google_color_link = "CC0000";
-							google_color_text = "000000";
-							google_color_url = "B3B3B3";
-							//-->
-							</script>
-							<script type="text/javascript"
-							  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-							</script>
-						</div>
-						<% end %>
-
 						<!-- Ende rechter Content -->
 					
 					</div>
