Yahho Authentification Meta Key hinzugefügt

--- a/app/views/layouts/eventicus.rhtml
+++ b/app/views/layouts/eventicus.rhtml
@@ -4,6 +4,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+		<meta name="y_key" content="13906d118df944d8" />
 		<title>Eventicus 2.0 - <%= yield :title %></title>
 		<link rel="Shortcut Icon" href="/favicon.png" />
 		<!--<%= stylesheet_link_tag 'redbox' %>-->
