--- a/app/views/category/list.rhtml
+++ b/app/views/category/list.rhtml
@@ -19,8 +19,7 @@
 <% end %>
 </table>
 
-<%= link_to 'Previous page', { :page => @category_pages.current.previous } if @category_pages.current.previous %>
-<%= link_to 'Next page', { :page => @category_pages.current.next } if @category_pages.current.next %> 
+<%= will_paginate @categories %>
 
 <br />
 
