--- a/app/views/metro/list.rhtml
+++ b/app/views/metro/list.rhtml
@@ -19,8 +19,7 @@
 <% end %>
 </table>
 
-<%= link_to 'Previous page', { :page => @metro_pages.current.previous } if @metro_pages.current.previous %>
-<%= link_to 'Next page', { :page => @metro_pages.current.next } if @metro_pages.current.next %> 
+<%= will_paginate @metros %>
 
 <br />
 
